// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact info travel manager page contact travel info method should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="contact-method form"
        name="CONTACT_TRAVEL_MANAGER_METHOD_FORM"
        novalidate=""
      >
        <fieldset>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_INFO_TRAVEL_MANAGER__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="mt6"
            >
              <div
                class="notification-field"
              />
            </div>
            <div
              class="contact-method-communication"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Phone
                    </span>
                    <i
                      class="icon icon_check"
                    />
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="contact-method-fields"
            >
              <div
                class="field phone-number-field phone-number-field--international"
              >
                <div
                  class="labeled input large"
                >
                  <div
                    class="input--label mr4"
                  >
                    +1
                  </div>
                  <input
                    label="+1"
                    name="phoneNumber"
                    placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                    type="tel"
                    value="214-555-1234"
                  />
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
      
    </div>
  </body>,
  "container": <div>
    <form
      class="contact-method form"
      name="CONTACT_TRAVEL_MANAGER_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div
            class="page-header action-bar"
            id=""
          >
            <ul
              class="action-bar-buttons action-bar--left-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="button"
                  type="button"
                >
                  SHARED__BUTTON_TEXT__CANCEL
                </button>
              </li>
            </ul>
            <div
              class="action-bar--container"
            >
              <div
                class="action-bar--title-align-center action-bar--title"
              >
                <span
                  class="action-bar--main-title"
                >
                  SHARED__CONTACT_INFO_TRAVEL_MANAGER__PAGE_HEADER_TITLE
                </span>
                <span
                  class="action-bar--sub-title"
                />
              </div>
            </div>
            <ul
              class="action-bar-buttons action-bar--right-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="button"
                  type="submit"
                >
                  SHARED__BUTTON_TEXT__DONE
                </button>
              </li>
            </ul>
          </div>
          <div />
        </div>
        <div
          class="contact-method--content"
        >
          <div
            class="mt6"
          >
            <div
              class="notification-field"
            />
          </div>
          <div
            class="contact-method-communication"
          >
            <div
              class="field"
            >
              <ul
                class="contact-method-options"
              >
                <li
                  class="contact-method-item"
                >
                  <span>
                    Phone
                  </span>
                  <i
                    class="icon icon_check"
                  />
                </li>
                <li
                  class="contact-method-item"
                >
                  <span>
                    Email
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="contact-method-fields"
          >
            <div
              class="field phone-number-field phone-number-field--international"
            >
              <div
                class="labeled input large"
              >
                <div
                  class="input--label mr4"
                >
                  +1
                </div>
                <input
                  label="+1"
                  name="phoneNumber"
                  placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                  type="tel"
                  value="214-555-1234"
                />
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`contact info travel manager page contact travel info method should set contact method email when contact method is EMAIL_ME 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="contact-method form"
        name="CONTACT_TRAVEL_MANAGER_METHOD_FORM"
        novalidate=""
      >
        <fieldset>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_INFO_TRAVEL_MANAGER__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="mt6"
            >
              <div
                class="notification-field"
              />
            </div>
            <div
              class="contact-method-communication"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Phone
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                    <i
                      class="icon icon_check"
                    />
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="contact-method-fields"
            >
              <div
                class="field"
              >
                <div
                  class="contact-email-field input"
                >
                  <input
                    class=""
                    name="email"
                    placeholder="Email address"
                    value="123@gnmail.com"
                  />
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
      
    </div>
  </body>,
  "container": <div>
    <form
      class="contact-method form"
      name="CONTACT_TRAVEL_MANAGER_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div
            class="page-header action-bar"
            id=""
          >
            <ul
              class="action-bar-buttons action-bar--left-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="button"
                  type="button"
                >
                  SHARED__BUTTON_TEXT__CANCEL
                </button>
              </li>
            </ul>
            <div
              class="action-bar--container"
            >
              <div
                class="action-bar--title-align-center action-bar--title"
              >
                <span
                  class="action-bar--main-title"
                >
                  SHARED__CONTACT_INFO_TRAVEL_MANAGER__PAGE_HEADER_TITLE
                </span>
                <span
                  class="action-bar--sub-title"
                />
              </div>
            </div>
            <ul
              class="action-bar-buttons action-bar--right-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="button"
                  type="submit"
                >
                  SHARED__BUTTON_TEXT__DONE
                </button>
              </li>
            </ul>
          </div>
          <div />
        </div>
        <div
          class="contact-method--content"
        >
          <div
            class="mt6"
          >
            <div
              class="notification-field"
            />
          </div>
          <div
            class="contact-method-communication"
          >
            <div
              class="field"
            >
              <ul
                class="contact-method-options"
              >
                <li
                  class="contact-method-item"
                >
                  <span>
                    Phone
                  </span>
                </li>
                <li
                  class="contact-method-item"
                >
                  <span>
                    Email
                  </span>
                  <i
                    class="icon icon_check"
                  />
                </li>
              </ul>
            </div>
          </div>
          <div
            class="contact-method-fields"
          >
            <div
              class="field"
            >
              <div
                class="contact-email-field input"
              >
                <input
                  class=""
                  name="email"
                  placeholder="Email address"
                  value="123@gnmail.com"
                />
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`contact info travel manager page contact travel info method should set contact method email when contact method is null 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="contact-method form"
        name="CONTACT_TRAVEL_MANAGER_METHOD_FORM"
        novalidate=""
      >
        <fieldset>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_INFO_TRAVEL_MANAGER__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="mt6"
            >
              <div
                class="notification-field"
              />
            </div>
            <div
              class="contact-method-communication"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Phone
                    </span>
                    <i
                      class="icon icon_check"
                    />
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="contact-method-fields"
            >
              <div
                class="field phone-number-field phone-number-field--international"
              >
                <div
                  class="labeled input large"
                >
                  <div
                    class="input--label mr4"
                  >
                    +1
                  </div>
                  <input
                    label="+1"
                    name="phoneNumber"
                    placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                    type="tel"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
      
    </div>
  </body>,
  "container": <div>
    <form
      class="contact-method form"
      name="CONTACT_TRAVEL_MANAGER_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div
            class="page-header action-bar"
            id=""
          >
            <ul
              class="action-bar-buttons action-bar--left-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="button"
                  type="button"
                >
                  SHARED__BUTTON_TEXT__CANCEL
                </button>
              </li>
            </ul>
            <div
              class="action-bar--container"
            >
              <div
                class="action-bar--title-align-center action-bar--title"
              >
                <span
                  class="action-bar--main-title"
                >
                  SHARED__CONTACT_INFO_TRAVEL_MANAGER__PAGE_HEADER_TITLE
                </span>
                <span
                  class="action-bar--sub-title"
                />
              </div>
            </div>
            <ul
              class="action-bar-buttons action-bar--right-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="button"
                  type="submit"
                >
                  SHARED__BUTTON_TEXT__DONE
                </button>
              </li>
            </ul>
          </div>
          <div />
        </div>
        <div
          class="contact-method--content"
        >
          <div
            class="mt6"
          >
            <div
              class="notification-field"
            />
          </div>
          <div
            class="contact-method-communication"
          >
            <div
              class="field"
            >
              <ul
                class="contact-method-options"
              >
                <li
                  class="contact-method-item"
                >
                  <span>
                    Phone
                  </span>
                  <i
                    class="icon icon_check"
                  />
                </li>
                <li
                  class="contact-method-item"
                >
                  <span>
                    Email
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="contact-method-fields"
          >
            <div
              class="field phone-number-field phone-number-field--international"
            >
              <div
                class="labeled input large"
              >
                <div
                  class="input--label mr4"
                >
                  +1
                </div>
                <input
                  label="+1"
                  name="phoneNumber"
                  placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                  type="tel"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
